Refactor Llama-3.1-8B-Instruct: Migrate from vLLM to Transformers
- Removed vllm configuration and dialogue system files.
- Added new dialogue system implementation using Hugging Face Transformers.
- Updated requirements to reflect dependencies for the new implementation.
- Created README with setup instructions and usage guidelines for the Transformers-based dialogue system.
- Configured conversation history saving and loading mechanisms.
- Enhanced error handling and logging for better user experience.

--- a/Task2/Llama-3.1-8B-Instruct/transformers/config.json
+++ b/Task2/Llama-3.1-8B-Instruct/transformers/config.json
@@ -16,6 +16,6 @@
         "system_prompt": "You are Llama 3.1 8B deployed for human-robot interaction research. Provide precise, safe, and actionable guidance for robotics tasks.",
         "max_history": 6,
         "save_conversations": true,
-        "conversation_dir": "conversations_vllm"
+        "conversation_dir": "conversations_transformers"
     }
 }
