--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,11 @@ __pycache__/
 hf_cache/
 **/hf_cache/
 **/.cache/
-**/llama31-vllm/
+**/llama31*/
 Task2/Llama-3.1-8B-Instruct/conversations/*
 !Task2/Llama-3.1-8B-Instruct/conversations/.gitkeep
-Task2/Llama-3.1-8B-Instruct/vllm/conversations_vllm/*
-!Task2/Llama-3.1-8B-Instruct/vllm/conversations_vllm/.gitkeep
-Task2/Llama-3.1-8B-Instruct/vllm/__pycache__/
+Task2/Llama-3.1-8B-Instruct/transformers/conversations_transformers/*
+!Task2/Llama-3.1-8B-Instruct/transformers/conversations_transformers/.gitkeep
+Task2/Llama-3.1-8B-Instruct/transformers/__pycache__/
 Task2/Llama-3.1-8B-Instruct/__pycache__/
+**/.env
