--- a/Task2/Llama-3.1-8B-Instruct/transformers/config.json
+++ b/Task2/Llama-3.1-8B-Instruct/transformers/config.json
@@ -1,6 +1,6 @@
 {
     "model_name": "meta-llama/Llama-3.1-8B-Instruct",
-    "dtype": "bfloat16",
+    "dtype": "float16",
     "tensor_parallel_size": 1,
     "gpu_memory_utilization": 0.9,
     "enforce_eager": false,
