--- a/Task2/Llama-3.1-8B-Instruct/vllm/config.json
+++ b/Task2/Llama-3.1-8B-Instruct/vllm/config.json
@@ -3,7 +3,7 @@
     "tokenizer_name": "meta-llama/Llama-3.1-8B-Instruct",
     "dtype": "float16",
     "tensor_parallel_size": 1,
-    "gpu_memory_utilization": 0.90,
+    "gpu_memory_utilization": 0.9,
     "enforce_eager": false,
     "max_model_len": 6144,
     "max_num_seqs": 8,
@@ -24,6 +24,6 @@
         "conversation_dir": "conversations"
     },
     "runtime": {
-        "conda_env": "llama3-vllm"
+        "conda_env": "EE5112Project"
     }
 }
